Use the thread context classloader to load "application.properties"
This seems to work best between modules and when also supporting loading
from the actual native image.

To allow loading the file, the application.properties resource is now
fetched from the sibling "application" project and copied into resources/
of the native image as well.